update deployment workflows

--- a/.github/workflows/deploy-wpe-production.yml
+++ b/.github/workflows/deploy-wpe-production.yml
@@ -1,6 +1,22 @@
 name: Deploy to Production
 
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+    inputs:
+      deploy_muplugins:
+        type: boolean
+        description: MU-Plugins
+        default: true
+      deploy_plugins:
+        type: boolean
+        description: Plugins
+      deploy_root:
+        type: boolean
+        description: Root files
+      deploy_themes:
+        type: boolean
+        description: Themes
+        default: true
 
 env:
   INSTALL:  
@@ -10,18 +26,19 @@ jobs:
 
   deploy-root:
     runs-on: ubuntu-latest
-
+    if: ${{ inputs.deploy_root }}
     steps:
-    - uses: actions/checkout@v2
+    
+    - uses: actions/checkout@v3
       with:
         fetch-depth: '0'
 
     - name: Install SSH key
-      uses: shimataro/ssh-key-action@v2
+      uses: benoitchantre/setup-ssh-authentication-action@1.0.0
       with:
-        key: ${{ secrets.WPENGINE_SSH_KEY_PRIVATE }}
-        name: deploy-wpengine
-        known_hosts: ${{ secrets.KNOWN_HOSTS }}
+        private-key: ${{ secrets.WPENGINE_SSH_KEY_PRIVATE }}
+        private-key-name: deploy-wpengine
+        known-hosts: ${{ secrets.KNOWN_HOSTS }}
 
     - name: Deploy root
       run: |
@@ -39,18 +56,19 @@ jobs:
 
   deploy-plugins:
     runs-on: ubuntu-latest
-
+    if: ${{ inputs.deploy_plugins }}
     steps:
-    - uses: actions/checkout@v2
+
+    - uses: actions/checkout@v3
       with:
         fetch-depth: '0'
 
     - name: Install SSH key
-      uses: shimataro/ssh-key-action@v2
+      uses: benoitchantre/setup-ssh-authentication-action@1.0.0
       with:
-        key: ${{ secrets.WPENGINE_SSH_KEY_PRIVATE }}
-        name: deploy-wpengine
-        known_hosts: ${{ secrets.KNOWN_HOSTS }}
+        private-key: ${{ secrets.WPENGINE_SSH_KEY_PRIVATE }}
+        private-key-name: deploy-wpengine
+        known-hosts: ${{ secrets.KNOWN_HOSTS }}
 
     - name: Deploy plugins
       run: |
@@ -65,18 +83,19 @@ jobs:
 
   deploy-muplugins:
     runs-on: ubuntu-latest
-
+    if: ${{ inputs.deploy_muplugins }}
     steps:
-    - uses: actions/checkout@v2
+
+    - uses: actions/checkout@v3
       with:
         fetch-depth: '0'
 
     - name: Install SSH key
-      uses: shimataro/ssh-key-action@v2
+      uses: benoitchantre/setup-ssh-authentication-action@1.0.0
       with:
-        key: ${{ secrets.WPENGINE_SSH_KEY_PRIVATE }}
-        name: deploy-wpengine
-        known_hosts: ${{ secrets.KNOWN_HOSTS }}
+        private-key: ${{ secrets.WPENGINE_SSH_KEY_PRIVATE }}
+        private-key-name: deploy-wpengine
+        known-hosts: ${{ secrets.KNOWN_HOSTS }}
 
     - name: Deploy mu-plugins
       run: |
@@ -91,18 +110,19 @@ jobs:
 
   deploy-themes:
     runs-on: ubuntu-latest
-
+    if: ${{ inputs.deploy_themes }}
     steps:
-    - uses: actions/checkout@v2
+
+    - uses: actions/checkout@v3
       with:
         fetch-depth: '0'
 
     - name: Install SSH key
-      uses: shimataro/ssh-key-action@v2
+      uses: benoitchantre/setup-ssh-authentication-action@1.0.0
       with:
-        key: ${{ secrets.WPENGINE_SSH_KEY_PRIVATE }}
-        name: deploy-wpengine
-        known_hosts: ${{ secrets.KNOWN_HOSTS }}
+        private-key: ${{ secrets.WPENGINE_SSH_KEY_PRIVATE }}
+        private-key-name: deploy-wpengine
+        known-hosts: ${{ secrets.KNOWN_HOSTS }}
 
     - name: Deploy themes
       run: |
@@ -118,14 +138,15 @@ jobs:
   clear-caches:
     runs-on: ubuntu-latest
     needs: [ deploy-plugins, deploy-muplugins, deploy-themes, deploy-root ]
-
+    if: ${{ always() && contains( needs.*.result, 'success' ) }}
     steps:
+
     - name: Install SSH key
-      uses: shimataro/ssh-key-action@v2
+      uses: benoitchantre/setup-ssh-authentication-action@1.0.0
       with:
-        key: ${{ secrets.WPENGINE_SSH_KEY_PRIVATE }}
-        name: deploy-wpengine
-        known_hosts: ${{ secrets.KNOWN_HOSTS }}
+        private-key: ${{ secrets.WPENGINE_SSH_KEY_PRIVATE }}
+        private-key-name: deploy-wpengine
+        known-hosts: ${{ secrets.KNOWN_HOSTS }}
 
     - name: Clear caches
       run: ssh -i ~/.ssh/deploy-wpengine $INSTALL@$SSH_HOST 'wp cache flush; wp page-cache flush; wp cdn-cache flush'
