--- a/.github/workflows/deploy-wpe-dev.yml
+++ b/.github/workflows/deploy-wpe-dev.yml
@@ -1,6 +1,22 @@
 name: Deploy to Dev
 
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+    inputs:
+      deploy_muplugins:
+        type: boolean
+        description: MU-Plugins
+        default: true
+      deploy_plugins:
+        type: boolean
+        description: Plugins
+      deploy_root:
+        type: boolean
+        description: Root files
+      deploy_themes:
+        type: boolean
+        description: Themes
+        default: true
 
 env:
   INSTALL:  
@@ -8,68 +24,74 @@ env:
 
 jobs:
 
+  backup-root-placeholder:
+    runs-on: ubuntu-latest
+    if: ${{ inputs.deploy_root }}
+    steps:
+
+    - run: echo "Placeholder for unnecessary backup job"
+
   backup-plugins:
     runs-on: ubuntu-latest
+    if: ${{ inputs.deploy_plugins }}
     steps:
 
     - name: Install SSH key
-      uses: shimataro/ssh-key-action@v2
+      uses: benoitchantre/setup-ssh-authentication-action@1.0.0
       with:
-        key: ${{ secrets.WPENGINE_SSH_KEY_PRIVATE }}
-        name: deploy-wpengine
-        known_hosts: ${{ secrets.KNOWN_HOSTS }}
+        private-key: ${{ secrets.WPENGINE_SSH_KEY_PRIVATE }}
+        private-key-name: deploy-wpengine
+        known-hosts: ${{ secrets.KNOWN_HOSTS }}
 
     - name: Backup plugins
       run: ssh -i ~/.ssh/deploy-wpengine $INSTALL@$SSH_HOST 'zip -r --filesync --test --display-bytes --display-counts sites/${{ env.INSTALL }}/_wpeprivate/backup-plugins.zip sites/${{ env.INSTALL }}/wp-content/plugins'
 
   backup-muplugins:
     runs-on: ubuntu-latest
+    if: ${{ inputs.deploy_muplugins }}
     steps:
 
     - name: Install SSH key
-      uses: shimataro/ssh-key-action@v2
+      uses: benoitchantre/setup-ssh-authentication-action@1.0.0
       with:
-        key: ${{ secrets.WPENGINE_SSH_KEY_PRIVATE }}
-        name: deploy-wpengine
-        known_hosts: ${{ secrets.KNOWN_HOSTS }}
+        private-key: ${{ secrets.WPENGINE_SSH_KEY_PRIVATE }}
+        private-key-name: deploy-wpengine
+        known-hosts: ${{ secrets.KNOWN_HOSTS }}
 
     - name: Backup mu-plugins
       run: ssh -i ~/.ssh/deploy-wpengine $INSTALL@$SSH_HOST 'zip -r --filesync --test --display-bytes --display-counts sites/${{ env.INSTALL }}/_wpeprivate/backup-muplugins.zip sites/${{ env.INSTALL }}/wp-content/mu-plugins'
 
   backup-themes:
     runs-on: ubuntu-latest
+    if: ${{ inputs.deploy_themes }}
     steps:
 
     - name: Install SSH key
-      uses: shimataro/ssh-key-action@v2
+      uses: benoitchantre/setup-ssh-authentication-action@1.0.0
       with:
-        key: ${{ secrets.WPENGINE_SSH_KEY_PRIVATE }}
-        name: deploy-wpengine
-        known_hosts: ${{ secrets.KNOWN_HOSTS }}
+        private-key: ${{ secrets.WPENGINE_SSH_KEY_PRIVATE }}
+        private-key-name: deploy-wpengine
+        known-hosts: ${{ secrets.KNOWN_HOSTS }}
 
     - name: Backup themes
       run: ssh -i ~/.ssh/deploy-wpengine $INSTALL@$SSH_HOST 'zip -r --filesync --test --display-bytes --display-counts sites/${{ env.INSTALL }}/_wpeprivate/backup-themes.zip sites/${{ env.INSTALL }}/wp-content/themes'
 
   deploy-root:
     runs-on: ubuntu-latest
-
+    if: ${{ inputs.deploy_root }}
+    needs: [ backup-root-placeholder ]
     steps:
-    - uses: actions/checkout@v2
+    
+    - uses: actions/checkout@v3
       with:
         fetch-depth: '0'
 
     - name: Install SSH key
-      uses: shimataro/ssh-key-action@v2
+      uses: benoitchantre/setup-ssh-authentication-action@1.0.0
       with:
-        key: ${{ secrets.WPENGINE_SSH_KEY_PRIVATE }}
-        name: deploy-wpengine
-        known_hosts: ${{ secrets.KNOWN_HOSTS }}
-
-    - name: Set branch name
-      run: |
-        echo ${GITHUB_REF#refs/heads/} > .what-git-branch
-        cat .what-git-branch
-        scp -i ~/.ssh/deploy-wpengine .what-git-branch "$INSTALL@$SSH_HOST:/sites/$INSTALL/"
+        private-key: ${{ secrets.WPENGINE_SSH_KEY_PRIVATE }}
+        private-key-name: deploy-wpengine
+        known-hosts: ${{ secrets.KNOWN_HOSTS }}
 
     - name: Deploy root
       run: |
@@ -87,19 +109,20 @@ jobs:
 
   deploy-plugins:
     runs-on: ubuntu-latest
+    if: ${{ inputs.deploy_plugins }}
     needs: [ backup-plugins ]
-
     steps:
-    - uses: actions/checkout@v2
+
+    - uses: actions/checkout@v3
       with:
         fetch-depth: '0'
 
     - name: Install SSH key
-      uses: shimataro/ssh-key-action@v2
+      uses: benoitchantre/setup-ssh-authentication-action@1.0.0
       with:
-        key: ${{ secrets.WPENGINE_SSH_KEY_PRIVATE }}
-        name: deploy-wpengine
-        known_hosts: ${{ secrets.KNOWN_HOSTS }}
+        private-key: ${{ secrets.WPENGINE_SSH_KEY_PRIVATE }}
+        private-key-name: deploy-wpengine
+        known-hosts: ${{ secrets.KNOWN_HOSTS }}
 
     - name: Deploy plugins
       run: |
@@ -114,19 +137,20 @@ jobs:
 
   deploy-muplugins:
     runs-on: ubuntu-latest
+    if: ${{ inputs.deploy_muplugins }}
     needs: [ backup-muplugins ]
-
     steps:
-    - uses: actions/checkout@v2
+
+    - uses: actions/checkout@v3
       with:
         fetch-depth: '0'
 
     - name: Install SSH key
-      uses: shimataro/ssh-key-action@v2
+      uses: benoitchantre/setup-ssh-authentication-action@1.0.0
       with:
-        key: ${{ secrets.WPENGINE_SSH_KEY_PRIVATE }}
-        name: deploy-wpengine
-        known_hosts: ${{ secrets.KNOWN_HOSTS }}
+        private-key: ${{ secrets.WPENGINE_SSH_KEY_PRIVATE }}
+        private-key-name: deploy-wpengine
+        known-hosts: ${{ secrets.KNOWN_HOSTS }}
 
     - name: Deploy mu-plugins
       run: |
@@ -141,19 +165,20 @@ jobs:
 
   deploy-themes:
     runs-on: ubuntu-latest
+    if: ${{ inputs.deploy_themes }}
     needs: [ backup-themes ]
-
     steps:
-    - uses: actions/checkout@v2
+
+    - uses: actions/checkout@v3
       with:
         fetch-depth: '0'
 
     - name: Install SSH key
-      uses: shimataro/ssh-key-action@v2
+      uses: benoitchantre/setup-ssh-authentication-action@1.0.0
       with:
-        key: ${{ secrets.WPENGINE_SSH_KEY_PRIVATE }}
-        name: deploy-wpengine
-        known_hosts: ${{ secrets.KNOWN_HOSTS }}
+        private-key: ${{ secrets.WPENGINE_SSH_KEY_PRIVATE }}
+        private-key-name: deploy-wpengine
+        known-hosts: ${{ secrets.KNOWN_HOSTS }}
 
     - name: Deploy themes
       run: |
@@ -166,17 +191,37 @@ jobs:
           --filter=':- /.gitignore' \
           wp-content/themes/ "$INSTALL@$SSH_HOST:/sites/$INSTALL/wp-content/themes"
 
+  what-git-branch:
+    runs-on: ubuntu-latest
+    needs: [ deploy-plugins, deploy-muplugins, deploy-themes, deploy-root ]
+    if: ${{ always() && contains( needs.*.result, 'success' ) }}
+    steps:
+
+    - name: Install SSH key
+      uses: benoitchantre/setup-ssh-authentication-action@1.0.0
+      with:
+        private-key: ${{ secrets.WPENGINE_SSH_KEY_PRIVATE }}
+        private-key-name: deploy-wpengine
+        known-hosts: ${{ secrets.KNOWN_HOSTS }}
+
+    - name: Set branch name
+      run: |
+        echo ${GITHUB_REF#refs/heads/} > .what-git-branch
+        cat .what-git-branch
+        scp -i ~/.ssh/deploy-wpengine .what-git-branch "$INSTALL@$SSH_HOST:/sites/$INSTALL/"
+
   clear-caches:
     runs-on: ubuntu-latest
     needs: [ deploy-plugins, deploy-muplugins, deploy-themes, deploy-root ]
-
+    if: ${{ always() && contains( needs.*.result, 'success' ) }}
     steps:
+
     - name: Install SSH key
-      uses: shimataro/ssh-key-action@v2
+      uses: benoitchantre/setup-ssh-authentication-action@1.0.0
       with:
-        key: ${{ secrets.WPENGINE_SSH_KEY_PRIVATE }}
-        name: deploy-wpengine
-        known_hosts: ${{ secrets.KNOWN_HOSTS }}
+        private-key: ${{ secrets.WPENGINE_SSH_KEY_PRIVATE }}
+        private-key-name: deploy-wpengine
+        known-hosts: ${{ secrets.KNOWN_HOSTS }}
 
     - name: Clear caches
       run: ssh -i ~/.ssh/deploy-wpengine $INSTALL@$SSH_HOST 'wp cache flush; wp page-cache flush; wp cdn-cache flush'
